<resources>
    <string name="app_name">NFT App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="null">null</string>
    <string name="start">Start</string>
    <string name="digital_arts">Digital Arts</string>
    <string name="collect_and_sell">Collect and Sell</string>
    <string name="nft_marketplace">NFT Marketplace</string>
    <string name="nft">nft</string>
    <string name="line">line</string>
    <string name="find_your_best_nft_market">Find your Best NFT Market</string>
    <string name="continue">Continue</string>
    <string name="next">Next</string>
    <string name="featured">featured</string>
    <string name="bored_ape">Bored Ape</string>
    <string name="top_picks">top_picks</string>
    <string name="nft_image">nft_image</string>
    <string name="please_try_again">Please try again</string>
    <string name="whoops_a_problem_has_been_encountered">Whoops! A problem has been encountered</string>
    <string name="alert">alert</string>
</resources>