<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.main.IntroFragment2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_nft"
        android:contentDescription="@string/nft"/>

    <TextView
        android:id="@+id/textViewNftFindMarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/find_your_best_nft_market"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:text="@string/next"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_regular"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNftFindMarket" />

</androidx.constraintlayout.widget.ConstraintLayout>